fix(snowflakes/style.css): fix text alignment

--- a/snowflakes/style.css
+++ b/snowflakes/style.css
@@ -44,4 +44,6 @@ p {
   margin-top: 0.5em;
   margin-bottom: 0;
   font-family: "Lato", Verdana, Geneva, Tahoma, sans-serif;
+
+  text-align: center;
 }
